Remove css causing alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,28 +273,6 @@ hr {
     top: 1000px;
 }
 
-#opening-hours-section {
-    height: 800px;
-}
-
-.one-third-left {
-    width: 33%;
-    float: left;
-}
-
-.one-third-middle {
-    width: 33%;
-}
-
-.one-third-right {
-    width: 33%;
-    float: right;
-}
-
-.left-content
-.middle-content
-.right-content
-
 .darker-text {
     font-family: 'Rock Salt', cursive;
     font-weight: 900;
